# BBOP

./: .gitignore  LICENSE  README.md  bbop250707.yml  bbop_env.yml  bbop_environment_241205.yml  bbop_environment_241209.yml  bbop_environment_241209_resolve_conflicts.yml  com_tragatory_bunlde_exe.ipynb  conver_avi_to_tiff.ipynb  exe_bundle_dynamic_function.ipynb  exe_single.ipynb  exe_sync_convert_temp.ipynb  loop_all_convert.ipynb  pyproject.toml  readme_todo.md  sync_df_from_raw_exe.ipynb
240724test/: metadata_mir_240724.csv
25may_brys_exe/: scan_250505_25april_for_dappy.ipynb  status_fields_config_oct3v1_brws_250430.py
25oct_sorted_scan/: 251028_scan_sorted.ipynb
auto_process_engine/: ssh_auto_process_test.ipynb
bbop_execution_25may/: 250825_for_tianqing_com_checking.ipynb  csalib_minji_muli_delete_251020.ipynb  single_250525.ipynb  single_250630.ipynb  single_exe_250212_brws.ipynb  single_exe_ssh_250505.ipynb  single_exe_ssh_250523.ipynb  ssh_exe_yankun_251017.ipynb  sssh_exe_25april_250505.ipynb  sssh_exe_25socialmini_250521.ipynb  sssh_exe_juneon_250625.ipynb  sssh_exe_juneon_250918_calib.ipynb  sssh_exe_minji_250707.ipynb  sssh_exe_oct3v1_250505.ipynb  sssh_exe_oct3v1_250522_delete.ipynb  sssh_exe_oct3v1_250621.ipynb  status_fields_config_oct3v1_brws_250430.py  status_fields_config_oct3v1_brws_250522.py  status_fields_config_oct3v1_brws_250523.py
demo/: 3d_keypoint_social_analysis.ipynb  3d_keypoint_social_analysis_cleaneddatastrc.ipynb  bbop_preprocess_demo.ipynb
execution/: mir_train_pred_vis.ipynb
label3d_tools/: check_frame_times.ipynb  (+2 more)
(+455 files in other folders)
